# graphome

./: .gitignore  Cargo.toml  HARDENING_STATUS.md  HG00290_BRCA1.fa  LAPACK_info.txt  MEMORY_MAPPED_GBZ_RESULTS.md  README.md  ROOT_CAUSE_ANALYSIS.md  build.rs  sae.py
.github/workflows/: amy-analysis.yml  cargo-test-release-nightly.yml  test_brca1_extraction.yml
audio/: combine.py  spectrum.py
data/: minimal.gfa  minimal.paf
lapack_tests/src/: test_lapack.f90
plan/: plan.md
scripts/: README.md  README_test_brca1.md  eigen.py  eigenbench.py  iter.sh  plot_amy_ngec.py  run_amy_analysis.sh  test_brca1_extraction.py
src/: HG00290_BRCA1_HG00290#1_HG00290_1_CM089988.1_43044294-43170245.fa  README.md  build.rs  convert.rs  coords.rs  display.rs  dsbevd.rs  eigen.rs  eigen_print.rs  eigen_region.rs  embed.rs  entropy.rs  extract.rs  gfa2gbz.rs  io.rs  lib.rs  main.rs  make_sequence.rs  map.rs  mapped_gbz.rs  pangenome_catalog.rs  pangenome_features.rs  pangenome_runtime.rs  progress.rs  sparse_spectral.rs  video.rs  viz.rs  window.rs
tests/: common_chm13.rs  test_convert.rs  test_coordinate_extraction.rs  test_dsbevd.rs  test_eigen.rs  test_extract.rs  test_io.rs  test_map.rs  test_pangenome_features.rs  test_sparse_sampling.rs
visual/: 2D_random_vis.py  2D_vis.py  2D_window_vis.py  3D_vis.py  3D_viz_simple.py  Erdős_Rényi_model.py  bipartite_model.py  circulantish_model.py  communities_model.py  full_viz.py  poetry_connectivity_eigendecomposition.py  synth_graphs.py  vis.py
visual/visual/: path_model.py
