[package]
name = "graphome"
version = "0.1.0"
edition = "2021"

[lib]
name = "graphome"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
indicatif = "0.17"
bitvec = "1.0"
rayon = "1.5"
csv = "1.1"
termcolor = "1.1"
palette = "0.6"
nalgebra = "0.33.0"
tempfile = "3.3"
ndarray = { version = "0.16.1", features = ["rayon"] }
ndarray-linalg = "0.16.0"
rand = "0.8.5"
memmap2 = "0.9.5"
rand_chacha = "0.3.1"
rand_distr = "0.4.3"
eigenvalues = "0.4"
sprs = "0.11"
approx = "0.5.1"
ndarray-npy = "0.9.1"
parking_lot = "0.11.1"
num_cpus = "1.16.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[[test]]
name = "test_convert"
path = "tests/test_convert.rs"

[[test]]
name = "test_dsbevd"
path = "tests/test_dsbevd.rs"

[[test]]
name = "test_eigen"
path = "tests/test_eigen.rs"

[[test]]
name = "test_extract"
path = "tests/test_extract.rs"

[[bin]]
name = "display"
path = "src/display.rs"
