[package]
name = "graphome"
version = "0.1.0"
edition = "2021"

[lib]
name = "graphome"
path = "src/lib.rs"

[[bin]]
name = "graphome"
path = "src/main.rs"

[dependencies]
gbwt = "0.3.1"
simple_sds = { package = "simple-sds-sbwt", version = "0.3.2" }
clap = { version = "4.5.50", features = ["derive"] }
indicatif = "0.18.0"
bitvec = "1.0.1"
rayon = "1.11.0"
csv = "1.4.0"
termcolor = "1.4.1"
palette = "0.7.6"
nalgebra = "0.34.1"
tempfile = "3.23.0"
ndarray = { version = "0.16.1", features = ["rayon"] }
faer = "0.23.2"
rand = "0.8.5"
memmap2 = "0.9.8"
rand_chacha = "0.3.1"
rand_distr = "0.4.3"
sprs = "0.11.3"
approx = "0.5.1"
ndarray-npy = "0.9.1"
parking_lot = "0.12.5"
num_cpus = "1.17.0"
termimage = "1.2.2"
image = "0.25.8"
termsize = "0.1.9"
viuer = "0.9.2"
hdbscan = "0.11.0"
base64 = "0.22.1"
gif = "0.13.3"
memchr = "2.7.6"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[[test]]
name = "test_convert"
path = "tests/test_convert.rs"


[[test]]
name = "test_eigen"
path = "tests/test_eigen.rs"

[[test]]
name = "test_extract"
path = "tests/test_extract.rs"
